# CodeHub-Desktop

./: .gitignore  CMakeLists.txt  README.md  WebService.h  main.cpp
commit/: Commit.cpp  Commit.h
config/: ConfigFiles.h  Configs.h  Endpoints.h
entity/: VersionControlSystem.cpp  VersionControlSystem.h
entity/commit/: Commit.cpp  Commit.h
entity/file/: File.cpp  File.h
entity/filemanager/: CommitsManager.cpp  ConfigManager.cpp  ConfigManager.h  RepositoriesManager.cpp  RepositoriesManager.h  RepositoryConfigManager.cpp  RepositoryConfigManager.h
entity/logger/: Logger.cpp
entity/repository/: Repository.cpp  Repository.h
entity/validation/: Validator.h
file/: File.cpp  File.h  FileDifference.h  FileStatus.h
filemanager/: CommitsManager.cpp  CommitsManager.h  Configs.h  IFileManager.h  IgnoreFileManager.cpp  IgnoreFileManager.h  RepositoriesManager.cpp  RepositoriesManager.h  RepositoryConfigManager.cpp  RepositoryConfigManager.h  RestoreFileManager.cpp  RestoreFileManager.h  UserFileManager.cpp  UserFileManager.h
include/commit/: Commit.h
include/config/: ConfigFiles.h  RepositoryConfig.h  Types.h
include/dtl/: Diff.hpp  Diff3.hpp  Lcs.hpp  README.md  Sequence.hpp  Ses.hpp  functors.hpp  variables.hpp
include/file/: File.h  FileStatus.h
include/filecomparator/: FileComparator.h
include/filemanager/: BranchesManager.h  CommitsManager.h  FilesManager.h  IFileManager.h  IgnoreFileManager.h  RepositoriesManager.h  RepositoryConfigManager.h  RestoreFileManager.h  UserFileManager.h
include/json/: Json.h  JsonSerializer.h
include/log/: Logger.h
include/repository/: Repository.h
include/serializer/: JsonSerializer.h
include/utils/: ConfigFiles.h  Endpoints.h  Types.h
include/validation/: Validator.h
include/vcs/: VersionControlSystem.h
include/web/: WebService.h
logger/: Logger.h
repository/: Repository.cpp  Repository.h
serializer/: JsonSerializer.cpp  JsonSerializer.h
src/commit/: Commit.cpp  Commit.h
src/config/: Endpoints.h  RepositoryConfig.cpp
src/file/: File.cpp  FileStatus.h
src/filecomparator/: FileComparator.cpp
src/filemanager/: BranchesManager.cpp  CommitsManager.cpp  CommitsManager.h  FilesManager.cpp  IgnoreFileManager.cpp  RepositoriesManager.cpp  RepositoriesManager.h  RepositoryConfigManager.cpp  RepositoryConfigManager.h  RestoreFileManager.cpp  RestoreFileManager.h  UserFileManager.cpp  UserFileManager.h
src/json/: JsonSerializer.cpp
src/log/: Logger.cpp
src/repository/: Repository.cpp  Repository.h
src/serializer/: JsonSerializer.cpp  JsonSerializer.h
src/validation/: Validator.cpp  Validator.h
src/vcs/: VersionControlSystem.cpp  VersionControlSystem.h
src/web/: WebService.cpp  WebService.h
validation/: Validator.cpp  Validator.h
vcs/: VersionControlSystem.cpp  VersionControlSystem.h
web/: Endpoints.h  WebService.cpp  WebService.h
